# qwen-cline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tes.py
src/: main.py  server.py  types.py  utils.py
src/api/: qwen_cline.py
src/api/lm_studio/: lmstudio.py
src/api/ollama/: ollama.py  response.py
src/core/: config.py  loggging.py
src/core/types/: response.py
src/utils/: file_handler.py  prompt.py
