[project]
name = "qwen-cline"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmad Rosyihuddin",email = "arosyihuddin6@gmail.com"}
]

requires-python = ">=3.11"

[tool.poetry.dependencies]
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
qwen-api = "^1.3.10"

[tool.poetry]
packages = [{include = "qwen_cline", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
