[project]
name = "qwen-cline"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmad Rosyihuddin", email = "arosyihuddin6@gmail.com"}
]

requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "qwen-api>=1.4.12",
    "uvicorn>=0.34.3",
]

[tool.poetry]
packages = [{include = "src", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
