[project]
name = "qwen-cline"
version = "1.2.4"
description = ""
authors = [
    {name = "Ahmad Rosyihuddin", email = "arosyihuddin6@gmail.com"}
]

requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "qwen-api==1.4.15",
    "uvicorn[standard]>=0.34.3",
]

[tool.poetry]
packages = [{include = "src", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
